--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,4 @@
 buildscript {
-    ext.aliRepo = [
-            snapshot: 'https://repo.rdc.aliyun.com/repository/72077-snapshot-057BdJ/',
-            release : 'https://repo.rdc.aliyun.com/repository/72077-release-FWXfLw/',
-            username: project.hasProperty("skd.repo.username") ? project['skd.repo.username'] : '',
-            password: project.hasProperty("skd.repo.password") ? project['skd.repo.password'] : ''
-    ]
 
     repositories {
         gradlePluginPortal()
@@ -12,31 +6,15 @@ buildscript {
             url 'https://maven.aliyun.com/nexus/content/groups/public/'
         }
 
-        maven {
-            url aliRepo.release
-            credentials {
-                username(aliRepo.username)
-                password(aliRepo.password)
-            }
-        }
-        maven {
-            url aliRepo.snapshot
-            credentials {
-                username(aliRepo.username)
-                password(aliRepo.password)
-            }
-        }
-
     }
     dependencies {
-        classpath "io.jmix.gradle:jmix-gradle-plugin:1.1.0"
+        classpath "io.jmix.gradle:jmix-gradle-plugin:1.1.3"
     }
 }
 
 
 
 group = 'cn.jmix'
-version = '0.0.1-SNAPSHOT'
 
 subprojects {
     apply plugin: 'java-library'
@@ -44,14 +22,16 @@ subprojects {
     apply plugin: 'io.jmix'
 
     repositories {
-        mavenCentral()
-                maven {
-        url 'https://global.repo.jmix.io/repository/public'
-    }
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://global.repo.jmix.io/repository/public'
+        }
     }
 
     jmix {
-        bomVersion = '1.1.0'
+        bomVersion = '1.1.1'
         projectId = 'alifs'
     }
 
@@ -74,12 +54,12 @@ subprojects {
     publishing {
         repositories {
             maven {
-                url = aliRepo.snapshot
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/" + System.getenv("GITHUB_REPOSITORY"))
                 credentials {
-                    username aliRepo.username
-                    password aliRepo.password
+                    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+                    password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
                 }
-                allowInsecureProtocol = true
             }
         }
         publications {
