--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
             url 'https://maven.aliyun.com/nexus/content/groups/public/'
         }
 
-    }
+    } 
     dependencies {
         classpath "io.jmix.gradle:jmix-gradle-plugin:1.1.3"
     }
@@ -55,7 +55,7 @@ subprojects {
         repositories {
             maven {
                 name = "GitHubPackages"
-                url = uri("https://maven.pkg.github.com/" + System.getenv("GITHUB_REPOSITORY"))
+                url = uri("https://maven.pkg.github.com/alifs")
                 credentials {
                     username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
                     password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
