--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,11 @@ jobs:
         with:
           java-version: 1.8
       - name: Publish package
-        run: gradle -Pversion=${{ github.event.release.tag_name }} build publish
+        run: |
+             gradle \ 
+                -Pversion=${{ github.event.release.tag_name }} \
+                --args='--jmix.alifs.accessKey=${{ jmix.alifs.accessKey }} --jmix.alifs.secretAccessKey=${{ jmix.alifs.secretAccessKey }}' \
+                build publish
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_USERNAME: ${{ github.repository_owner }}
