--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
           java-version: 1.8
       - name: Publish package
         run: |
-             gradle \ 
+             gradlew \ 
                 -Pversion=${{ github.event.release.tag_name }} \
                 --args='--jmix.alifs.accessKey=${{ JMIX_ALIFS_ACCESSKEY }} --jmix.alifs.secretAccessKey=${{ JMIX_ALIFS_SECRETACCESSKEY }}' \
                 build publish
