pass args to spring boot tests from gradle command

--- a/alifs/alifs.gradle
+++ b/alifs/alifs.gradle
@@ -21,5 +21,11 @@ dependencies {
 }
 
 test {
+    if (project.hasProperty('args')) {
+        project.args.split(',').each {
+            def (key, value) = it.replaceFirst('--', "").split('=')
+            systemProperty ((String)key, (String)value)
+        }
+    }
     useJUnitPlatform()
 }
