--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         run: >
              gradle  
                 -Pversion=${{ github.event.release.tag_name }} 
-                --args='--jmix.alifs.accessKey=${{ secrets.JMIX_ALIFS_ACCESSKEY }} --jmix.alifs.secretAccessKey=${{ secrets.JMIX_ALIFS_SECRETACCESSKEY }}' 
+                --args='--jmix.alifs.accessKey=${{ secrets.JMIX_ALIFS_ACCESSKEY }},--jmix.alifs.secretAccessKey=${{ secrets.JMIX_ALIFS_SECRETACCESSKEY }}' 
                 build publish
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
