--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: CI pipeline
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
           java-version: 1.8
 
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradlew -Pargs='jmix.alifs.accessKey=${{ secrets.JMIX_ALIFS_ACCESSKEY }} ,--jmix.alifs.secretAccessKey=${{ secrets.JMIX_ALIFS_SECRETACCESSKEY }}' test
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v2
