--- a/alifs/alifs.gradle
+++ b/alifs/alifs.gradle
@@ -1,3 +1,4 @@
+import org.springframework.util.StringUtils
 
 apply plugin: 'groovy'
 apply plugin: 'io.jmix'
@@ -24,7 +25,7 @@ test {
     if (project.hasProperty('args')) {
         project.args.split(',').each {
             def (key, value) = it.replaceFirst('--', "").split('=')
-            systemProperty ((String)key, (String)value)
+            systemProperty (StringUtils.trimAllWhitespace((String)key), StringUtils.trimAllWhitespace((String)value ))
         }
     }
     useJUnitPlatform()
